--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,3 +1,31 @@
-.container{
-    margin-top: 10vh;
+.container {
+  margin-top: 17vh;
+}
+
+.label {
+  display: "flex";
+  justify-content: center;
+}
+
+.inputGroup {
+  text-align: center;
+  margin-bottom: 3vh;
+}
+
+.paper {
+  padding: 35px;
+}
+
+.form {
+  padding-left: 10vw !important;
+  padding-right: 10vw !important;
+}
+
+.suffix {
+  margin-left: 10px !important;
+}
+
+.formHeader {
+  text-align: center;
+  margin-bottom: 20px !important;
 }
