--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,3 +1,10 @@
 .container{
     margin-top: 10vh;
 }
+
+.container2{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
