--- a/client/src/components/bar/bar.css
+++ b/client/src/components/bar/bar.css
@@ -3,9 +3,10 @@
   margin-left: auto !important;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 28px;
   text-align: center;
   text-decoration: none;
+  font-size: 15px !important;
   display: inline-block;
   font-size: 12px;
   margin: 4px 2px;
@@ -17,9 +18,10 @@
   margin-left: auto !important;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 28px;
   text-align: center;
   text-decoration: none;
+  font-size: 15px !important;
   display: inline-block;
   font-size: 12px;
   margin: 4px 2px;
