remove today highlight

--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -24,3 +24,8 @@
 .fc-highlight {
   background-color: inherit !important;
 }
+
+.fc-today,
+.fc-day-today {
+  background-color: inherit !important;
+}
